--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>My Website</title>
+<title>About This Website</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -422,12 +422,12 @@ summary {
 
 
 
-<h1 class="title toc-ignore">My Website</h1>
+<h1 class="title toc-ignore">About This Website</h1>
 
 </div>
 
 
-<p>Hello, Website!</p>
+<p>More about this website.</p>
 
 
 
